# ALLEGRO4

./: ALLEGRO em Desenvolvimento Dicas.pptx  CURSO DE PROGRAMAÇÃO ALLEGRO.doc  Fundamentos1-SlidesC23-2008-10-09.ppt  TODO.txt
00EGL/: engcomp_glib.h  library_version.h
ANIMACAO/: ANIMACAO PARTE II.dev  ANIMACAO PARTE II.layout  Character.h  Makefile.win  main.cpp
ANIMVETOR/: ANIMVETOR.dev  ANIMVETOR.exe.Manifest  ANIMVETOR.fpj  ANIMVETOR_private.h  ANIMVETOR_private.rc  Makefile.win  indexryu.h  main.cpp  sprite.cpp  sprite.h
AewMario/: Makefile.win  SuperMario.dev  SuperMario.fpj  SuperMario.layout  gmon.out
Animacao de Sprites/: ANIM DAT.dev  ANIM DAT.fpj  ANIM DAT.layout  ANIM_DAT_private.h  ANIM_DAT_private.rc  ANIM_DAT_private.res  Makefile.win  logica.cpp  main.cpp  ryuindex.h  sprite.cpp  sprite.h
C Fighter/: C Fighter.dev  C Fighter.exe.Manifest  C Fighter.layout  C_Fighter_private.h  C_Fighter_private.rc  C_Fighter_private.res  Cenario.cpp  FIGHT.dev  FIGHT.layout  FIGHT_private.h  FIGHT_private.rc  FIGHT_private.res  Logica.cpp  Logica.h  Makefile.win  PlayerClass.cpp  PlayerClass.h  Thumbs.db  cenario.h  global.h  main.cpp  main.txt  main2.txt  (+3 more)
Jogo2d/: Makefile  Makefile.am  Thumbs.db
Jogo2d/platformscroller/: Makefile.in  Thumbs.db
Jogo2d/platformscroller/docs/: Makefile  Makefile.in
Jogo2d/platformscroller/docs/en/: Makefile
warbirds/: Makefile  Makefile.am  Makefile.in  Makefile.mak  Makefile.win  Warbirds.dev  Warbirds.fpj  Warbirds.h  Warbirds.layout  Warbirds_private.h  Warbirds_private.rc  Warbirds_private.res  main.c  warbirds.h.gch
(+2906 files in other folders)
