####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = platformscroller

## INCLUDES were found outside kdevelop specific part

platformscroller_SOURCES = mappyal.c main.c 
platformscroller_LDADD   = -L/usr/local/lib -L/usr/X11R6/lib -lalleg -lXxf86dga -lXxf86vm  -lkdeui -lX11


EXTRA_DIST = main.c mappyal.c mappyal.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
platformscroller_LDFLAGS = $(all_libraries) 
                                                                                
