####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = warbirds

## INCLUDES were found outside kdevelop specific part

warbirds_SOURCES = mappyal.c main.c 
warbirds_LDADD   = -L/usr/local/lib -L/usr/X11R6/lib -lalleg -lXxf86dga -lXxf86vm  -lkdeui -lX11


EXTRA_DIST = main.c mappyal.c mappyal.h warbirds.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
warbirds_LDFLAGS = $(all_libraries) 
                                                                                
